...
                
                TextField("", text: $sculptureName)
                    .padding()
                    .background(Color.white.opacity(0.6))
                    .cornerRadius(26)
                    .foregroundColor(.black)
                    .accessibilityIdentifier("SculptureNameTextField")
                    .focused($isUsernameFocused)
                
                Button(action: onSave) {
                    Text("Salvar")
                        .frame(maxWidth: .infinity)
                        .padding()
                        .background(Color("customBlue").opacity(0.8))
                        .foregroundColor(.white)
                        .cornerRadius(100)
                        .contentShape(Rectangle())
                }
                .buttonStyle(.plain)
                .accessibilityIdentifier("ConfirmSaveButton")
                
            }
            .padding()
            .background(Color.white.opacity(0.6))
            .cornerRadius(32)
            .shadow(radius: 10)
...
